WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82502
Android mouse event factory doesn't allow specifying click count and modifier
https://bugs.webkit.org/show_bug.cgi?id=82502
Summary
Android mouse event factory doesn't allow specifying click count and modifier
Bolin Hsu
Reported
2012-03-28 12:12:19 PDT
In file Source/WebKit/chromium/src/android/WebInputEventFactory.cpp, WebInputEventFactory::mouseEvent() doesn't allow caller to specify click count and modifiers. These are useful in specifying events like double click or Ctrl+click, etc.
Attachments
Patch
(2.77 KB, patch)
2012-03-29 11:56 PDT
,
Bolin Hsu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Bolin Hsu
Comment 1
2012-03-29 11:56:47 PDT
Created
attachment 134635
[details]
Patch
WebKit Review Bot
Comment 2
2012-03-29 12:01:52 PDT
Please wait for approval from
abarth@webkit.org
,
dglazkov@chromium.org
,
fishd@chromium.org
,
jamesr@chromium.org
or
tkent@chromium.org
before submitting, as this patch contains changes to the Chromium public API. See also
https://trac.webkit.org/wiki/ChromiumWebKitAPI
.
Eric Seidel (no email)
Comment 3
2012-03-29 13:35:53 PDT
Comment on
attachment 134635
[details]
Patch OK. I assume this positively effects tests?
Bolin Hsu
Comment 4
2012-03-29 14:40:04 PDT
I don't see this method called anywhere, so it shouldn't affect test.
Peter Beverloo
Comment 5
2012-03-29 14:42:38 PDT
The relevant code has not been upstreamed to Chromium yet, so that is correct. However, our downstream branch doesn't actually know about these parameters, they seem to be specific to Google TV. I'd appreciate it if you could postpone landing this code until we can find a way to synchronize our upstreaming efforts, because this is bound to collide somewhere in the near future (in this case, our local branch would see compile errors following a merge, but that's not something we can ask you to keep in mind). I'll send you a follow up e-mail in the morning.
Bolin Hsu
Comment 6
2012-03-29 15:01:52 PDT
Do I need to take any action?
Peter Beverloo
Comment 7
2012-03-29 15:31:06 PDT
No, we'll discuss this via e-mail. Since Eric reviewed your patch I can put it on the commit queue after there's some more clarity :).
Eric Seidel (no email)
Comment 8
2012-03-29 15:31:54 PDT
Does the Android upstreaming project have documents/diffs anywhere I might see? I'm curious to see how far along ya'll are.
Peter Beverloo
Comment 9
2012-03-29 15:35:35 PDT
Internally they're on go/upstreamdiff, publicly you could diff the source tarball against ToT (download:
http://chromium-browser-source.commondatastorage.googleapis.com/chrome_android_tarball.html
).
Eric Seidel (no email)
Comment 10
2012-03-29 16:41:47 PDT
Oh, I meant the Google TV upstreaming, since it sounded like this bug was Google-TV specific?
Peter Beverloo
Comment 11
2012-04-03 09:10:11 PDT
Comment on
attachment 134635
[details]
Patch Putting this on the commit queue.
WebKit Review Bot
Comment 12
2012-04-03 09:49:25 PDT
Comment on
attachment 134635
[details]
Patch Clearing flags on attachment: 134635 Committed
r113048
: <
http://trac.webkit.org/changeset/113048
>
WebKit Review Bot
Comment 13
2012-04-03 09:49:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug