[Chromium] Add click count and modifiers to the factory method of mouse event. https://bugs.webkit.org/show_bug.cgi?id=82502

Modify WebInputEventFactory::mouseEvent() to take click count
and modifiers from input parameters. Sample use cases of these
are double click, triple click, Ctrl+click, etc.

Patch by Bolin Hsu <bhsu@google.com> on 2012-04-03
Reviewed by Eric Seidel.

* public/android/WebInputEventFactory.h:
* src/android/WebInputEventFactory.cpp:
(WebKit::WebInputEventFactory::mouseEvent):

Canonical link: https://commits.webkit.org/100404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113048 268f45cc-cd09-0410-ab3c-d52691b4dbfc